cmake_minimum_required(VERSION 3.23)
project(GSSS_CPP)

set(CMAKE_CXX_STANDARD 23)

add_executable(GSSS_CPP Mixed/main.cpp)
add_executable(GSSS_CPP_0 Mixed/DMA.cpp)
add_executable(GSSS_CPP_1 Mixed/ConstPointerFunction.cpp)
add_executable(GSSS_CPP_2 Mixed/ZeroOnePattern.cpp)
add_executable(GSSS_CPP_3 Mixed/ZigZagPattern.cpp)
add_executable(GSSS_CPP_4 Mixed/RotateAnArray.cpp)
add_executable(GSSS_CPP_5 Mixed/PairWithGivenSumInArray.cpp)
add_executable(GSSS_CPP_6 Mixed/MaxInArrayTillNTerms.cpp)
add_executable(GSSS_CPP_7 Mixed/GenericFunction.cpp)
add_executable(GSSS_CPP_8 Mixed/GenericPointer.cpp)
add_executable(GSSS_CPP_9 Mixed/FunctionPointer.cpp)
add_executable(GSSS_CPP_10 Mixed/UniquePointer.cpp)
add_executable(GSSS_CPP_11 OOPs/OOPsWithoutConstructor.cpp)
add_executable(GSSS_CPP_12 OOPs/OOPsWithConstructor.cpp)
add_executable(GSSS_CPP_13 OOPs/Encapsulation.cpp)
add_executable(GSSS_CPP_14 OOPs/Inheritance.cpp)
add_executable(GSSS_CPP_15 OOPs/OverLoading.cpp)
add_executable(GSSS_CPP_16 OOPs/OverRiding.cpp)
add_executable(GSSS_CPP_17 OOPs/FriendClass.cpp)
add_executable(GSSS_CPP_18 OOPs/FriendFunction.cpp)
add_executable(GSSS_CPP_19 OOPs/ExceptionHandling.cpp)
add_executable(GSSS_CPP_20 DataStructures/SinglyLinkedList.cpp)
add_executable(GSSS_CPP_21 DataStructures/TreeTraversalUsingRecursion.cpp)
add_executable(GSSS_CPP_22 DataStructures/BinaryTreeUsingClass.cpp)
add_executable(GSSS_CPP_23 DataStructures/KadaneAlgo.cpp)
add_executable(GSSS_CPP_24 DataStructures/GreatestNumberFromAString.cpp)
add_executable(GSSS_CPP_25 DataStructures/CommonElementInThreeArrays.cpp)
add_executable(GSSS_CPP_26 DataStructures/StateLanguageMap.cpp)
add_executable(GSSS_CPP_27 DataStructures/StudentFavFoodMap.cpp)
add_executable(GSSS_CPP_28 Algos/BinarySearch.cpp)
add_executable(GSSS_CPP_29 Algos/RecursiveBinarySearch.cpp)
add_executable(GSSS_CPP_30 Algos/StringSwapCases.cpp)
add_executable(GSSS_CPP_31 Algos/VectorPairSum.cpp)
add_executable(GSSS_CPP_32 Algos/ReverseHeart.cpp)
add_executable(GSSS_CPP_33 DataStructures/SLL.cpp)
add_executable(GSSS_CPP_34 Algos/VectorCommonFinder.cpp)
add_executable(GSSS_CPP_35 DataStructures/CreateLinkedListFromVector.cpp)
add_executable(GSSS_CPP_36 DataStructures/LinkedListPalindrome.cpp)
add_executable(GSSS_CPP_37 DataStructures/DLL.cpp)
add_executable(GSSS_CPP_38 DataStructures/ReversingAQueue.cpp)
add_executable(GSSS_CPP_39 Algos/MergeSortAlgo.cpp)
add_executable(GSSS_CPP_40 Algos/ArrayReversal.cpp)
add_executable(GSSS_CPP_41 Algos/IdenticalTrees.cpp)
add_executable(GSSS_CPP_42 Algos/MirrorOfATree.cpp)
add_executable(GSSS_CPP_43 Algos/AggressiveLions.cpp)
add_executable(GSSS_CPP_44 Algos/SolveSudoku.cpp)
add_executable(GSSS_CPP_45 Algos/HouseRobbery.cpp)
add_executable(GSSS_CPP_46 Mixed/Butterfly.cpp)
add_executable(GSSS_CPP_47 OOPs/CopyConstructor.cpp)
add_executable(GSSS_CPP_48 DataStructures/SinglyLinkedListWithAllOperations.cpp)
add_executable(GSSS_CPP_49 DataStructures/StackUsingLinkedList.cpp)
add_executable(GSSS_CPP_50 DataStructures/BinarySearchTree.cpp)
add_executable(GSSS_CPP_51 DataStructures/BSTEasy.cpp)
add_executable(GSSS_CPP_52 DataStructures/TrieImplementation.cpp)
add_executable(GSSS_CPP_53 DataStructures/PriorityQueueImplementation.cpp)
add_executable(GSSS_CPP_54 Algos/QuickSortAlgo.cpp)
add_executable(GSSS_CPP_55 Algos/QuickSortStriver.cpp)
add_executable(GSSS_CPP_56 Algos/RatInAMaze.cpp)
add_executable(GSSS_CPP_57 SortArrayOfMobilesByName.cpp)
add_executable(GSSS_CPP_58 STL/Maps.cpp)
add_executable(GSSS_CPP_59 STL/MapWithListOfStrings.cpp)
add_executable(GSSS_CPP_60 DataStructures/TrieDataStructure.cpp)
add_executable(GSSS_CPP_61 Algos/CountSort.cpp)
add_executable(GSSS_CPP_62 STL/PushBackEmplaceBackVectors.cpp)
add_executable(GSSS_CPP_63 Mixed/MaxRegionsInAPlane.cpp)
add_executable(GSSS_CPP_64 Files/StoryToFileAndBack.cpp)
add_executable(GSSS_CPP_65 Questions/UnionAndIntersectionOfTwoArrays.cpp)
add_executable(GSSS_CPP_66 Questions/UnionIntersectionCodingNinjas.cpp)
add_executable(GSSS_CPP_67 Questions/CommonInVectors.cpp)
add_executable(GSSS_CPP_68 Questions/SudokuSolver.cpp)
add_executable(GSSS_CPP_69 Dummy.cpp)
add_executable(GSSS_CPP_70 Questions/EfficientStructure.cpp)
add_executable(GSSS_CPP_71 Questions/PalindromeLinkedList.cpp)
add_executable(GSSS_CPP_72 Questions/Trie_LCP.cpp)
add_executable(GSSS_CPP_73 Questions/LooseCoupling.cpp)
add_executable(GSSS_CPP_74 Questions/FirstLastOccurrence.cpp)
add_executable(GSSS_CPP_75 Questions/PeakInMountainArray.cpp)
add_executable(GSSS_CPP_76 Questions/VirtualFunctions.cpp)
add_executable(GSSS_CPP_77 Questions/PureVirtualFunctions.cpp)
add_executable(GSSS_CPP_78 Questions/HandlingExceptionsInPrinter.cpp)
add_executable(GSSS_CPP_79 Questions/ReverseQueue.cpp)
add_executable(GSSS_CPP_80 Questions/IdenticalTrees.cpp)
add_executable(GSSS_CPP_81 Questions/MirrorOfABinaryTree.cpp)
add_executable(GSSS_CPP_82 Questions/SortedArrayToBalancedBST.cpp)
add_executable(GSSS_CPP_83 Questions/HouseRobbery2.cpp)
add_executable(GSSS_CPP_84 Questions/TaskAllocation.cpp)
add_executable(GSSS_CPP_85 Questions/AggressiveLions.cpp)
